Bug 133604 - FILESAVE: DOCX: fields are not displayed in MSO after RT
Summary: FILESAVE: DOCX: fields are not displayed in MSO after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.1.0 target:7.0.0.1 target:6.4.5
Keywords: bibisected, filter:docx, regression
: 133643 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-02 14:30 UTC by Xisco Faulí
Modified: 2020-06-23 12:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.1 master after RT (201.46 KB, image/png)
2020-06-08 13:45 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-06-02 14:30:19 UTC
Steps to reproduce:
1. Open attachment 59581 [details] from bug 48378
2. Save it .DOCX
3. Open the new generated document in MSO ( in my case I used MSO 2010)

-> Some fields are not displayed. See comparison image

Reproduced in

Version: 7.0.0.0.alpha1+
Build ID: 82894d85147840f1f587e9530b12f0058f2ef2c3
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded


[Bug found by office-interoperability-tools]
Comment 2 Xisco Faulí 2020-06-08 13:45:34 UTC
Created attachment 161764 [details]
Comparison MSO 2010 and LibreOffice 7.1 master after RT
Comment 3 Commit Notification 2020-06-09 08:39:25 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7f2908b83a39bbb6fa648d6815265ad203f86ddc

tdf#133604 sw: DOCX export: put CH_TXT_ATR_FORMELEMENT in its own run

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2020-06-09 09:18:35 UTC
fixed on master
Comment 5 Michael Stahl 2020-06-09 11:06:03 UTC
*** Bug 133643 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2020-06-09 14:39:18 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/a9c0c16ae407b1708df770f669290fd8334150ff

tdf#133604 sw: DOCX export: put CH_TXT_ATR_FORMELEMENT in its own run

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2020-06-09 20:55:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/f2e448175cee92fc695413e7281223e9f23e30ee

tdf#133604 sw: DOCX export: put CH_TXT_ATR_FORMELEMENT in its own run

It will be available in 6.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2020-06-10 08:43:25 UTC
Unittest for this issue added in 
https://git.libreoffice.org/core/commit/fb4109bbf816c9b915b255b7ff69060423337a62

@Michael S, thanks for fixing this issue!