tdf#133604 sw: DOCX export: put CH_TXT_ATR_FORMELEMENT in its own run

Commit b03fefcc4dbdfee3b9eeb5fa0e586dd12ddcd3d2 ought to have fixed this
but didn't; the run following the CH_TXT_ATR_FORMELEMENT still ended up
inside the field result.

But when importing that into Writer, it appeared correct; Word shows the
problem.

(regression from 94e0b8407b02d76b27324b8b08012eb024aca9e9)

Change-Id: I1fc1328223353422a83d403e8f790d156dbec4e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95843
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>